bug fix: handling overflow-y on preloading screen, setting specific delay to wait loader animation duration and set overflow-y to visible after fade-out animation finish

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -29,6 +29,14 @@
     opacity: 0;
   }
 }
+@keyframes overflowContent {
+  0% {
+    overflow-y: hidden;
+  }
+  100% {
+    overflow-y: visible;
+  }
+}
 html,
 body,
 div,
@@ -175,6 +183,10 @@ a:active {
 
 body {
   position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  animation: overflowContent 0.25s ease forwards;
+  animation-delay: 4.5s;
 }
 
 body {
@@ -747,7 +759,7 @@ footer .footer__links-container .footer__link {
   align-items: center;
   justify-content: center;
   animation: fade-out 2s ease-in-out forwards;
-  animation-delay: 4s;
+  animation-delay: 3s;
 }
 .modal .content {
   background-color: red;
