--- a/style/base/_reset.scss
+++ b/style/base/_reset.scss
@@ -144,4 +144,8 @@ a {
 
 body {
   position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  animation: overflowContent 0.25s ease forwards;
+  animation-delay: 4.5s;
 }
