--- a/style/components/_spinner-modal.scss
+++ b/style/components/_spinner-modal.scss
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: center;
   animation: fade-out 2s ease-in-out forwards;
-  animation-delay: 4s;
+  animation-delay: 3s;
 
   .content {
     background-color: red;
